--- a/index.html
+++ b/index.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-28</title>
+
+    <style>
+        body {
+            background-color: rgb(219, 252, 252);
+        }
+
+        .app-container {
+            width: 300px;
+            height: 390px;
+            border: 1px solid grey;
+            text-align: center;
+            margin-top: 50px;
+            border-radius: 20px;
+            box-shadow: 2px 0 8px 0;
+        }
+
+        .input-box {
+            width: 200px;
+            margin: 10px auto;
+            border-radius: 20px;
+            border-width: 6px;
+            height: 30px;
+            font-size: 20px;
+            text-align: center;
+        }
+
+        .app-heading {
+            text-align: center;
+        }
+
+        .btn-action {
+            width: 150px;
+            margin-top: 30px;
+            background-color: bisque;
+            border-radius: 50px;
+            border-width: 10px;
+            height: 50px;
+        }
+
+        .text-result {
+            width: 0;
+            padding: 0;
+            font-size: 30px;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <center>
+    <div class="app-container">
+        <h1 class="app-heading">Sum Of Two Numbers</h1>
+        <input type="text" class="input-box" id="input-num1" onkeyup="calSum()" />
+        <input type="text" class="input-box" id="input-num2" onkeyup="calSum()" />
+        <p class="text-result" id="text-result"></p>
+
+        <div>
+            <button type="button" class="btn-action" onclick="calSum()">
+                Calculate
+            </button>
+
+        </div>
+    </div>
+</center>
+
+    <script>
+
+    </script>
 </body>
+
 </html>
