--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             <button type="button" class="btn-action" onclick="calSum()">
                 Calculate
             </button>
-
+            <button type="button" class="btn-action" onclick="reset()">
+                Reset
+            </button>
         </div>
     </div>
 </center>
