--- a/Text-Matcher/text-matcher.html
+++ b/Text-Matcher/text-matcher.html
@@ -19,7 +19,20 @@
             display: flex;
             justify-content: space-evenly;
         }
-       
+        .input-text{
+            width: 300px;
+            height: 100px;
+            font-size: 16px;
+            border: 2px solid;
+            border-radius: 5px;
+            margin-top: 25px;
+        }
+        .match-result{
+            text-align: center;
+            font-size: 20px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
