add link for text-matcher

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             border-radius: 20px;
             box-shadow: 2px 0 8px 0;
             font-size: 15px;
+            margin-bottom: 40px;
         }
 
         .input-box {
@@ -78,7 +79,10 @@
                 </button>
             </div>
         </div>
+        <a href="Text-Matcher/text-matcher.html">Click Here To Redirect On Text-Matcher</a>
     </center>
+
+   
 
     <script>
         function calSum() {
